# spindulys

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
cmake/dependencies/internal/: SetupCxxopts.cmake  SetupMinitrace.cmake  SetupSpdlog.cmake  SetupTinyOBJLoader.cmake
cmake/modules/: FindUSD.cmake
cmake/setup/: CXX.cmake  Options.cmake
res/scenes/: basisCurves.usda  stormtroopers_overrides.usda
resources/scenes/: stormtroopers_overrides_overrides.usd  stormtroopers_simple.usda
src/: CMakeLists.txt
src/backend/cpu/: CMakeLists.txt  spindulysBackendCPU.h
src/backend/cpu/bsdf/: bsdf.cpp  bsdf.h  diffuse.cpp  diffuse.h  lambert.cpp  lambert.h  orennayar.cpp
src/backend/cpu/camera/: cpuCamera.cpp  cpuCamera.h
src/backend/cpu/geometry/: cpuCurve.cpp  cpuCurve.h  cpuGeometry.cpp  cpuGeometry.h  cpuMesh.cpp  cpuMesh.h  cpuQuadmesh.cpp  cpuQuadmesh.h  cpuTrianglemesh.cpp  cpuTrianglemesh.h
src/backend/cpu/integrator/: direct.cpp  direct.h  integrator.cpp  integrator.h  udpt.cpp  udpt.h
src/backend/cpu/lights/: cpuArea.cpp  cpuArea.h  cpuConstant.cpp  cpuConstant.h  cpuDirectional.cpp  cpuDirectional.h  cpuLight.h  cpuPoint.cpp  cpuPoint.h
src/backend/cpu/render/: cpuRenderManager.cpp  cpuRenderManager.h
src/backend/cpu/scene/: cpuScene.cpp  cpuScene.h
src/backend/cpu/utils/: interaction.h  ray.h  records.h
src/base/: CMakeLists.txt  spindulysBase.h
src/base/bsdf/: blendBSDF.h  bsdf.cpp  bsdf.h  diffuse.cpp  diffuse.h
src/base/bsdf/disney/: README.md
src/base/bsdf/rough/: README.md  dielectric.h
src/base/bsdf/smooth/: conductor.h  dielectric.h  diffuse.h  plastic.h
src/base/camera/: camera.cpp  camera.h
src/base/geometry/: curve.cpp  curve.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h
src/base/lights/: area.h  constant.h  directional.h  directionalArea.h  envmap.h  light.h  point.h  spot.h
src/base/render/: renderGlobals.h  renderManager.cpp  renderManager.h
src/base/scene/: scene.cpp  scene.h  sceneLoader.h
src/base/scene/objTranslators/: objSceneLoader.cpp  objSceneLoader.h
src/base/scene/usdTranslators/: usdBasisCurveTranslator.cpp  usdBasisCurveTranslator.h  usdCameraTranslator.cpp  usdCameraTranslator.h  usdMeshTranslator.cpp  usdMeshTranslator.h  usdSceneLoader.cpp  usdSceneLoader.h  usdTranslator.h
src/base/utils/: helperStructs.h  ior.h
src/frontend/: CMakeLists.txt  spindulysFrontend.h
src/frontend/camera/: camera.cpp  camera.h
src/frontend/geometry/: curve.cpp  curve.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h  quadmesh.cpp  quadmesh.h  trianglemesh.cpp  trianglemesh.h
src/frontend/lights/: area.h  constant.h  directional.h  directionalArea.h  light.h  point.h
src/frontend/render/: renderManager.cpp  renderManager.h
src/frontend/scene/: scene.cpp  scene.h  sceneLoader.h
src/frontend/scene/objTranslators/: objSceneLoader.cpp  objSceneLoader.h
src/frontend/scene/usdTranslators/: usdBasisCurveTranslator.cpp  usdBasisCurveTranslator.h  usdCameraTranslator.cpp  usdCameraTranslator.h  usdMeshTranslator.cpp  usdMeshTranslator.h  usdSceneLoader.cpp  usdSceneLoader.h  usdTranslator.h
src/gui/: CMakeLists.txt  main.cpp  spindulysGUI.h  window.cpp  window.h
src/gui/glfwViewer/: window.cpp  window.h
src/gui/opengl/: glshader.cpp
src/gui/sdlViewer/: CMakeLists.txt  main.cpp  window.cpp  window.h
src/share/: CMakeLists.txt  spindulys.h
src/share/spindulys/: buffer.h  defaults.h  fresnel.h  fwd.h  pcg32.h  platform.h  random.h  sampler.h
src/share/spindulys/math/: affinespace.h  col3.h  constants.h  linearspace3.h  math.h  vec2.h  vec3.h  vec4.h  warp.h
src/share/spindulys/samplers/: independent.h  ldsampler.h  multijitter.h  orthogonal.h  sampler.h  stratified.h  uniformDistrabution.h
src/variants/cpu/: CMakeLists.txt  spindulysCPU.h
src/variants/cpu/bsdf/: bsdf.cpp  bsdf.h  cpuBSDF.cpp  cpuBSDF.h  cpuDiffuse.cpp  cpuDiffuse.h  diffuse.cpp  diffuse.h
src/variants/cpu/bsdf/disney/: README.md
src/variants/cpu/bsdf/smooth/: cpuConductor.cpp  cpuConductor.h  cpuDielectric.cpp  cpuDielectric.h  cpuDiffuse.cpp  cpuDiffuse.h  cpuPlastic.cpp  cpuPlastic.h
src/variants/cpu/camera/: cpuCamera.cpp  cpuCamera.h
src/variants/cpu/geometry/: cpuCurve.cpp  cpuCurve.h  cpuGeometry.cpp  cpuGeometry.h  cpuMesh.cpp  cpuMesh.h
src/variants/cpu/integrator/: direct.cpp  direct.h  forwardPath.cpp  forwardPath.h  integrator.cpp  integrator.h
src/variants/cpu/lights/: cpuArea.cpp  cpuArea.h  cpuConstant.cpp  cpuConstant.h  cpuDirectional.cpp  cpuDirectional.h  cpuLight.h  cpuPoint.cpp  cpuPoint.h
src/variants/cpu/render/: cpuRenderManager.cpp  cpuRenderManager.h
src/variants/cpu/scene/: cpuScene.cpp  cpuScene.h
src/variants/cpu/utils/: interaction.h  ray.h  records.h
